--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Poppins";
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
